add writing and editing features

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,3 +22,33 @@ body {
   color: grey;
   margin: 5px 0px;
 }
+
+.p-20 {
+  padding: 20px;
+}
+input,
+textarea {
+  box-sizing: border-box;
+  padding: 10px;
+  display: block;
+  margin-bottom: 10px;
+}
+button {
+  padding: 10px 15px;
+  background: lightgray;
+  border: none;
+  border-radius: 5px;
+}
+
+.navbar {
+  background: white;
+  padding: 20px;
+}
+.navbar a {
+  margin-right: 10px;
+  text-decoration: none;
+  color: black;
+}
+.logo {
+  font-weight: bold;
+}
