--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,10 @@ body {
   padding: 20px;
   margin-bottom: 5px;
   box-shadow: rgb(224, 224, 224) 0px 2px 4px 0px;
+  opacity: 1;
+  transition: all 1s;
 }
+
 .list-item h4 {
   font-size: 20px;
   font-weight: 800;
